# CadernEdu

./: .editorconfig  .env.example  .env.portainer.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CadernEdu.code-workspace  README.md  melos.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: IA-WORKFLOW.md  SETUP.md  architecture.md
infra/: .env.example  (+4 more)
services/api/: .coverage  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_turmas_agenda.py  0003_responsavel_aluno_matriculas.py  0004_comunicacao.py  0005_chamada.py  0006_rbac_professor_turmas.py
services/api/app/: main.py
services/api/app/core/: config.py  database.py  deps.py  permissions.py  security.py  storage.py
services/api/app/domains/analytics/: router.py
services/api/app/domains/auth/: router.py
services/api/app/domains/comunicacao/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/domains/features/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/domains/gestao/: models.py  router.py
services/api/app/domains/identity/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/domains/pedagogico/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/shared/: base_model.py  exceptions.py  pagination.py
services/api/scripts/: seed_demo.py  seed_dev.py
services/api/tests/domains/: test_comunicacao.py  test_features.py  test_identity.py  test_pedagogico.py
(+91 files in other folders)
